radarr/radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  ports:
  - name: http
    port: 7878
  selector:
    app: radarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: radarr
  namespace: radarr
spec:
  tls:
  - hosts:
    - radarr.lukeaddison.co.uk
    secretName: radarr-tls
  rules:
  - host: radarr.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: radarr
          servicePort: 7878
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /
            port: 7878
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /
            port: 7878
          failureThreshold: 3
          timeoutSeconds: 15
          periodSeconds: 15
          initialDelaySeconds: 60
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - name: movies
          mountPath: /movies
        - name: config
          mountPath: /config
      volumes:
      - name: movies
        nfs:
          server: nfs.lukeaddison.co.uk
          path: "/mnt/data/plex/Movies"
      - name: config
        persistentVolumeClaim:
          claimName: config
