radarr/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: passthepopcorn-me
  namespace: radarr
spec:
  hosts:
  - passthepopcorn.me
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: neptune-whatbox-ca
  namespace: radarr
spec:
  hosts:
  - neptune.whatbox.ca
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dippystreams-co-uk
  namespace: radarr
spec:
  hosts:
  - dippystreams.co.uk
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: radarr-aeonlucid-com
  namespace: radarr
spec:
  hosts:
  - radarr.aeonlucid.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-pushbullet-com
  namespace: radarr
spec:
  hosts:
  - api.pushbullet.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-themoviedb-org
  namespace: radarr
spec:
  hosts:
  - api.themoviedb.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: image-tmdb-org
  namespace: radarr
spec:
  hosts:
  - image.tmdb.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-radarr-video
  namespace: radarr
spec:
  hosts:
  - api.radarr.video
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
