radarr/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr
  namespace: radarr
spec:
  hosts:
  - radarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway-internal
  http:
  - match:
    - port: 8080
    route:
    - destination:
        host: radarr
