radarr/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr
  namespace: radarr
spec:
  hosts:
  - radarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway-internal
  http:
  - match:
    - port: 8080
    route:
    - destination:
        host: radarr
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr-api
  namespace: radarr
spec:
  hosts:
  - api.radarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - port: 8443
      uri:
        prefix: /api
    route:
    - destination:
        host: radarr
